--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
+intoDeep.data.unityweb filter=lfs diff=lfs merge=lfs -text
+Build/intoDeep.data.unityweb filter=lfs diff=lfs merge=lfs -text
 *.unityweb filter=lfs diff=lfs merge=lfs -text
